# legal-rag

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
scripts/: build_vectordb.py
src/: config.py
src/agents/: citation_agent.py  orchestrator.py  response_agent.py
src/ingestion/: loader.py  vectorstore.py
src/tools/: retrieval_tools.py
